ASSIGNMENT 1 CHANGELOG
----------------------
##Created CI project

1 modify database config file, add mysql file