@@ -1,0 +1,13 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title><?php echo $title; ?></title>
+    </head>
+    <body>
+        <h1>Using default template</h1>
+        <div class="wrapper">
+            <?php echo $body; ?>  
+        </div>
+    </body> 
+</html>
+
